--- a/data/digest.html.j2
+++ b/data/digest.html.j2
@@ -13,8 +13,33 @@
   https://raw.githubusercontent.com/primer/octicons/main/icons/{{ name }}-{{ size }}.svg
 {%- endmacro -%}
 
+{%- macro octicon_img(name, size=16, color="") -%}
+  <img 
+    {# src="{{ octicon_url(name, size) }}"  #}
+    src="{{ inline_svg(octicon_url(name, size)) }}" 
+    alt="{{ name }}" 
+    width="{{ size }}" 
+    height="{{ size }}" 
+    style="
+      display: inline-block; 
+      vertical-align: middle;
+      {% if color == 'red' -%}
+        filter: invert(1) brightness(.5) sepia(1) hue-rotate(316deg) saturate(6) brightness(.8);
+      {% elif color == 'green' -%}
+        filter: invert(1) brightness(.5) sepia(1) hue-rotate(98deg) saturate(8) brightness(0.5);
+      {% elif color == 'purple' -%}
+        filter: invert(1) brightness(.5) sepia(1) hue-rotate(220deg) saturate(8) brightness(.65);
+      {% elif color == 'light gray' -%}
+        filter: invert(1) brightness(.5) sepia(1) hue-rotate(172deg) saturate(0.43) brightness(1.25);
+      {% elif color == 'gray' -%}
+        filter: invert(1) brightness(.5) sepia(1) hue-rotate(172deg) saturate(0.43) brightness(0.65);
+      {% endif -%}
+    "
+  />
+{%- endmacro -%}
+
 {%- macro octicon_bg(name, size=16, color="") -%}
-  background-image: url({{ octicon_url(name, size) }});
+  background:no-repeat url({{ inline_svg(octicon_url(name, size)) }});
   {# sepia: #aa9a7c -#}
   {% if color == "red" -%}
     filter: invert(1) brightness(.5) sepia(1) hue-rotate(316deg) saturate(6) brightness(.8);
@@ -213,7 +238,7 @@
             <li class="{{ entry.state|lower }}">
 
               <p><a href="{{ entry.url }}">{# -#}
-                <span class="octicons" title="
+                <span class="" title="
                   {%- if entry.dinghy_reasonCreated %}newly created; {% endif -%}
                   {%- if entry.dinghy_reasonMerged -%}newly merged; {% elif entry.dinghy_reasonClosed %}newly closed; {% endif -%}
                   {%- if entry.isDraft %}draft {% endif -%}
@@ -224,7 +249,8 @@
                 ">{# -#}
 
                   {%- if entry.dinghy_reasonCreated -%}
-                    <span class="octicon star"></span>
+                    {# <span class="octicon star"></span> #}
+                    {{ octicon_img("star") }}
                   {%- else -%}
                     <span class="octicon dash"></span>
                   {%- endif -%}
@@ -309,12 +335,5 @@
   {% endfor -%}
 </ul>
 
-<p class="footer">
-  created at {{ now|datetime("%Y-%m-%d %H:%M") }} by
-  <a href="https://pypi.org/project/dinghy/{{ __version__ }}">
-    dinghy
-    {# keep the dinghy_version span on a line by itself for `make check_release` -#}
-    <span class="dinghy_version">{{ __version__ }}</span></a>.
-</p>
 </body>
 </html>
